# snake_game

./: .gitignore  CMakeLists.txt  Food.cpp  Food.h  GameObject.h  GameTexture.cpp  GameTexture.h  GameWorld.cpp  GameWorld.h  GlobalTypes.h  README.md  Snake.cpp  Snake.h  Snakey.cpp  Snakey.h  main.cpp
spritesheet/: snake_ss.xcf  snake_ss2.xcf
src/: Food.cpp  GameTexture.cpp  GameWorld.cpp  Snakey.cpp  main.cpp
src/include/: Food.h  GameObject.h  GameTexture.h  GameWorld.h
